{
  "version": 4,
  "terraform_version": "1.12.1",
  "serial": 343,
  "lineage": "38dd70e3-61e1-d8d8-c986-978b1013a5fd",
  "resources": [
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "eks_nacl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:821368347884:network-acl/acl-0982c34e0aeeb1e7c",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0982c34e0aeeb1e7c",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 120,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 10250,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 110,
                "to_port": 10250
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 443
              }
            ],
            "owner_id": "821368347884",
            "region": "us-east-1",
            "subnet_ids": [],
            "tags": {
              "Backups": "Daily",
              "Compliance": "SOC2",
              "CostCenter": "Engineering",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "saasinfralab-dev-nacl",
              "Owner": "Platform Engineering",
              "Project": "SaasInfralab",
              "Repository": "terraform-modules"
            },
            "tags_all": {
              "Backups": "Daily",
              "Compliance": "SOC2",
              "CostCenter": "Engineering",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "saasinfralab-dev-nacl",
              "Owner": "Platform Engineering",
              "Project": "SaasInfralab",
              "Repository": "terraform-modules"
            },
            "vpc_id": "vpc-0e81350b5fbf55637"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_cloudwatch_log_group.cluster",
            "module.eks.aws_eks_cluster.main",
            "module.eks.aws_eks_node_group.main",
            "module.eks.aws_iam_instance_profile.nodes",
            "module.eks.aws_iam_openid_connect_provider.cluster",
            "module.eks.aws_launch_template.nodes",
            "module.eks.data.aws_ami.eks_optimized",
            "module.eks.data.aws_caller_identity.current",
            "module.eks.data.aws_iam_role.node_role",
            "module.eks.data.tls_certificate.cluster",
            "module.iam.aws_iam_role.cloudwatch_agent",
            "module.iam.aws_iam_role.eks_cluster",
            "module.iam.aws_iam_role.eks_node",
            "module.iam.aws_iam_role.vpc_flow_logs",
            "module.iam.aws_iam_role_policy.vpc_flow_logs_policy",
            "module.iam.aws_iam_role_policy_attachment.cw_agent_CloudWatchAgentServerPolicy",
            "module.iam.aws_iam_role_policy_attachment.eks_cluster_AmazonEKSClusterPolicy",
            "module.iam.aws_iam_role_policy_attachment.eks_cluster_AmazonEKSVPCResourceController",
            "module.iam.aws_iam_role_policy_attachment.eks_node_AmazonEC2ContainerRegistryReadOnly",
            "module.iam.aws_iam_role_policy_attachment.eks_node_AmazonEKSWorkerNodePolicy",
            "module.iam.aws_iam_role_policy_attachment.eks_node_AmazonEKS_CNI_Policy",
            "module.vpc.aws_cloudwatch_log_group.vpc_flow_logs",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_flow_log.vpc",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table_association.private_assoc",
            "module.vpc.aws_route_table_association.public_assoc",
            "module.vpc.aws_security_group.eks_cluster",
            "module.vpc.aws_security_group.eks_nodes",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "egress_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-100471297",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0982c34e0aeeb1e7c",
            "protocol": "-1",
            "region": "us-east-1",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_cloudwatch_log_group.cluster",
            "module.eks.aws_eks_cluster.main",
            "module.eks.aws_eks_node_group.main",
            "module.eks.aws_iam_instance_profile.nodes",
            "module.eks.aws_iam_openid_connect_provider.cluster",
            "module.eks.aws_launch_template.nodes",
            "module.eks.data.aws_ami.eks_optimized",
            "module.eks.data.aws_caller_identity.current",
            "module.eks.data.aws_iam_role.node_role",
            "module.eks.data.tls_certificate.cluster",
            "module.iam.aws_iam_role.cloudwatch_agent",
            "module.iam.aws_iam_role.eks_cluster",
            "module.iam.aws_iam_role.eks_node",
            "module.iam.aws_iam_role.vpc_flow_logs",
            "module.iam.aws_iam_role_policy.vpc_flow_logs_policy",
            "module.iam.aws_iam_role_policy_attachment.cw_agent_CloudWatchAgentServerPolicy",
            "module.iam.aws_iam_role_policy_attachment.eks_cluster_AmazonEKSClusterPolicy",
            "module.iam.aws_iam_role_policy_attachment.eks_cluster_AmazonEKSVPCResourceController",
            "module.iam.aws_iam_role_policy_attachment.eks_node_AmazonEC2ContainerRegistryReadOnly",
            "module.iam.aws_iam_role_policy_attachment.eks_node_AmazonEKSWorkerNodePolicy",
            "module.iam.aws_iam_role_policy_attachment.eks_node_AmazonEKS_CNI_Policy",
            "module.security.aws_network_acl.eks_nacl",
            "module.vpc.aws_cloudwatch_log_group.vpc_flow_logs",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_flow_log.vpc",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table_association.private_assoc",
            "module.vpc.aws_route_table_association.public_assoc",
            "module.vpc.aws_security_group.eks_cluster",
            "module.vpc.aws_security_group.eks_nodes",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "ephemeral_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 1024,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1173285778",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0982c34e0aeeb1e7c",
            "protocol": "6",
            "region": "us-east-1",
            "rule_action": "allow",
            "rule_number": 120,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_cloudwatch_log_group.cluster",
            "module.eks.aws_eks_cluster.main",
            "module.eks.aws_eks_node_group.main",
            "module.eks.aws_iam_instance_profile.nodes",
            "module.eks.aws_iam_openid_connect_provider.cluster",
            "module.eks.aws_launch_template.nodes",
            "module.eks.data.aws_ami.eks_optimized",
            "module.eks.data.aws_caller_identity.current",
            "module.eks.data.aws_iam_role.node_role",
            "module.eks.data.tls_certificate.cluster",
            "module.iam.aws_iam_role.cloudwatch_agent",
            "module.iam.aws_iam_role.eks_cluster",
            "module.iam.aws_iam_role.eks_node",
            "module.iam.aws_iam_role.vpc_flow_logs",
            "module.iam.aws_iam_role_policy.vpc_flow_logs_policy",
            "module.iam.aws_iam_role_policy_attachment.cw_agent_CloudWatchAgentServerPolicy",
            "module.iam.aws_iam_role_policy_attachment.eks_cluster_AmazonEKSClusterPolicy",
            "module.iam.aws_iam_role_policy_attachment.eks_cluster_AmazonEKSVPCResourceController",
            "module.iam.aws_iam_role_policy_attachment.eks_node_AmazonEC2ContainerRegistryReadOnly",
            "module.iam.aws_iam_role_policy_attachment.eks_node_AmazonEKSWorkerNodePolicy",
            "module.iam.aws_iam_role_policy_attachment.eks_node_AmazonEKS_CNI_Policy",
            "module.security.aws_network_acl.eks_nacl",
            "module.vpc.aws_cloudwatch_log_group.vpc_flow_logs",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_flow_log.vpc",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table_association.private_assoc",
            "module.vpc.aws_route_table_association.public_assoc",
            "module.vpc.aws_security_group.eks_cluster",
            "module.vpc.aws_security_group.eks_nodes",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "https_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 443,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-632446681",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0982c34e0aeeb1e7c",
            "protocol": "6",
            "region": "us-east-1",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_cloudwatch_log_group.cluster",
            "module.eks.aws_eks_cluster.main",
            "module.eks.aws_eks_node_group.main",
            "module.eks.aws_iam_instance_profile.nodes",
            "module.eks.aws_iam_openid_connect_provider.cluster",
            "module.eks.aws_launch_template.nodes",
            "module.eks.data.aws_ami.eks_optimized",
            "module.eks.data.aws_caller_identity.current",
            "module.eks.data.aws_iam_role.node_role",
            "module.eks.data.tls_certificate.cluster",
            "module.iam.aws_iam_role.cloudwatch_agent",
            "module.iam.aws_iam_role.eks_cluster",
            "module.iam.aws_iam_role.eks_node",
            "module.iam.aws_iam_role.vpc_flow_logs",
            "module.iam.aws_iam_role_policy.vpc_flow_logs_policy",
            "module.iam.aws_iam_role_policy_attachment.cw_agent_CloudWatchAgentServerPolicy",
            "module.iam.aws_iam_role_policy_attachment.eks_cluster_AmazonEKSClusterPolicy",
            "module.iam.aws_iam_role_policy_attachment.eks_cluster_AmazonEKSVPCResourceController",
            "module.iam.aws_iam_role_policy_attachment.eks_node_AmazonEC2ContainerRegistryReadOnly",
            "module.iam.aws_iam_role_policy_attachment.eks_node_AmazonEKSWorkerNodePolicy",
            "module.iam.aws_iam_role_policy_attachment.eks_node_AmazonEKS_CNI_Policy",
            "module.security.aws_network_acl.eks_nacl",
            "module.vpc.aws_cloudwatch_log_group.vpc_flow_logs",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_flow_log.vpc",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table_association.private_assoc",
            "module.vpc.aws_route_table_association.public_assoc",
            "module.vpc.aws_security_group.eks_cluster",
            "module.vpc.aws_security_group.eks_nodes",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "kubelet_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 10250,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-131823780",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0982c34e0aeeb1e7c",
            "protocol": "6",
            "region": "us-east-1",
            "rule_action": "allow",
            "rule_number": 110,
            "to_port": 10250
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_cloudwatch_log_group.cluster",
            "module.eks.aws_eks_cluster.main",
            "module.eks.aws_eks_node_group.main",
            "module.eks.aws_iam_instance_profile.nodes",
            "module.eks.aws_iam_openid_connect_provider.cluster",
            "module.eks.aws_launch_template.nodes",
            "module.eks.data.aws_ami.eks_optimized",
            "module.eks.data.aws_caller_identity.current",
            "module.eks.data.aws_iam_role.node_role",
            "module.eks.data.tls_certificate.cluster",
            "module.iam.aws_iam_role.cloudwatch_agent",
            "module.iam.aws_iam_role.eks_cluster",
            "module.iam.aws_iam_role.eks_node",
            "module.iam.aws_iam_role.vpc_flow_logs",
            "module.iam.aws_iam_role_policy.vpc_flow_logs_policy",
            "module.iam.aws_iam_role_policy_attachment.cw_agent_CloudWatchAgentServerPolicy",
            "module.iam.aws_iam_role_policy_attachment.eks_cluster_AmazonEKSClusterPolicy",
            "module.iam.aws_iam_role_policy_attachment.eks_cluster_AmazonEKSVPCResourceController",
            "module.iam.aws_iam_role_policy_attachment.eks_node_AmazonEC2ContainerRegistryReadOnly",
            "module.iam.aws_iam_role_policy_attachment.eks_node_AmazonEKSWorkerNodePolicy",
            "module.iam.aws_iam_role_policy_attachment.eks_node_AmazonEKS_CNI_Policy",
            "module.security.aws_network_acl.eks_nacl",
            "module.vpc.aws_cloudwatch_log_group.vpc_flow_logs",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_flow_log.vpc",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table_association.private_assoc",
            "module.vpc.aws_route_table_association.public_assoc",
            "module.vpc.aws_security_group.eks_cluster",
            "module.vpc.aws_security_group.eks_nodes",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "network_policy",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:821368347884:security-group/sg-07615f8088f02e97e",
            "description": "Security group for network policy enforcement",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07615f8088f02e97e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              }
            ],
            "name": "saasinfralab-dev-network-policy-20251028182655354400000006",
            "name_prefix": "saasinfralab-dev-network-policy-",
            "owner_id": "821368347884",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Backups": "Daily",
              "Compliance": "SOC2",
              "CostCenter": "Engineering",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "saasinfralab-dev-network-policy",
              "Owner": "Platform Engineering",
              "Project": "SaasInfralab",
              "Repository": "terraform-modules"
            },
            "tags_all": {
              "Backups": "Daily",
              "Compliance": "SOC2",
              "CostCenter": "Engineering",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "saasinfralab-dev-network-policy",
              "Owner": "Platform Engineering",
              "Project": "SaasInfralab",
              "Repository": "terraform-modules"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e81350b5fbf55637"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "821368347884",
            "id": "sg-07615f8088f02e97e",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.eks.aws_cloudwatch_log_group.cluster",
            "module.eks.aws_eks_cluster.main",
            "module.eks.aws_eks_node_group.main",
            "module.eks.aws_iam_instance_profile.nodes",
            "module.eks.aws_iam_openid_connect_provider.cluster",
            "module.eks.aws_launch_template.nodes",
            "module.eks.data.aws_ami.eks_optimized",
            "module.eks.data.aws_caller_identity.current",
            "module.eks.data.aws_iam_role.node_role",
            "module.eks.data.tls_certificate.cluster",
            "module.iam.aws_iam_role.cloudwatch_agent",
            "module.iam.aws_iam_role.eks_cluster",
            "module.iam.aws_iam_role.eks_node",
            "module.iam.aws_iam_role.vpc_flow_logs",
            "module.iam.aws_iam_role_policy.vpc_flow_logs_policy",
            "module.iam.aws_iam_role_policy_attachment.cw_agent_CloudWatchAgentServerPolicy",
            "module.iam.aws_iam_role_policy_attachment.eks_cluster_AmazonEKSClusterPolicy",
            "module.iam.aws_iam_role_policy_attachment.eks_cluster_AmazonEKSVPCResourceController",
            "module.iam.aws_iam_role_policy_attachment.eks_node_AmazonEC2ContainerRegistryReadOnly",
            "module.iam.aws_iam_role_policy_attachment.eks_node_AmazonEKSWorkerNodePolicy",
            "module.iam.aws_iam_role_policy_attachment.eks_node_AmazonEKS_CNI_Policy",
            "module.vpc.aws_cloudwatch_log_group.vpc_flow_logs",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_flow_log.vpc",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table_association.private_assoc",
            "module.vpc.aws_route_table_association.public_assoc",
            "module.vpc.aws_security_group.eks_cluster",
            "module.vpc.aws_security_group.eks_nodes",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_api_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow HTTPS to EKS API from allowed CIDRs",
            "from_port": 443,
            "id": "sgrule-1938298424",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-0357631d2c6cb217c",
            "security_group_rule_id": "sgr-0748105391f49c57b",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_cloudwatch_log_group.cluster",
            "module.eks.aws_eks_cluster.main",
            "module.eks.aws_eks_node_group.main",
            "module.eks.aws_iam_instance_profile.nodes",
            "module.eks.aws_iam_openid_connect_provider.cluster",
            "module.eks.aws_launch_template.nodes",
            "module.eks.data.aws_ami.eks_optimized",
            "module.eks.data.aws_caller_identity.current",
            "module.eks.data.aws_iam_role.node_role",
            "module.eks.data.tls_certificate.cluster",
            "module.iam.aws_iam_role.cloudwatch_agent",
            "module.iam.aws_iam_role.eks_cluster",
            "module.iam.aws_iam_role.eks_node",
            "module.iam.aws_iam_role.vpc_flow_logs",
            "module.iam.aws_iam_role_policy.vpc_flow_logs_policy",
            "module.iam.aws_iam_role_policy_attachment.cw_agent_CloudWatchAgentServerPolicy",
            "module.iam.aws_iam_role_policy_attachment.eks_cluster_AmazonEKSClusterPolicy",
            "module.iam.aws_iam_role_policy_attachment.eks_cluster_AmazonEKSVPCResourceController",
            "module.iam.aws_iam_role_policy_attachment.eks_node_AmazonEC2ContainerRegistryReadOnly",
            "module.iam.aws_iam_role_policy_attachment.eks_node_AmazonEKSWorkerNodePolicy",
            "module.iam.aws_iam_role_policy_attachment.eks_node_AmazonEKS_CNI_Policy",
            "module.vpc.aws_cloudwatch_log_group.vpc_flow_logs",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_flow_log.vpc",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table_association.private_assoc",
            "module.vpc.aws_route_table_association.public_assoc",
            "module.vpc.aws_security_group.eks_cluster",
            "module.vpc.aws_security_group.eks_nodes",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_to_nodes_kubelet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow cluster to kubelet API on nodes",
            "from_port": 10250,
            "id": "sgrule-1334256173",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-09dd6cc5f5d23e1d7",
            "security_group_rule_id": "sgr-0f39c2f7d65048062",
            "self": false,
            "source_security_group_id": "sg-0357631d2c6cb217c",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_cloudwatch_log_group.cluster",
            "module.eks.aws_eks_cluster.main",
            "module.eks.aws_eks_node_group.main",
            "module.eks.aws_iam_instance_profile.nodes",
            "module.eks.aws_iam_openid_connect_provider.cluster",
            "module.eks.aws_launch_template.nodes",
            "module.eks.data.aws_ami.eks_optimized",
            "module.eks.data.aws_caller_identity.current",
            "module.eks.data.aws_iam_role.node_role",
            "module.eks.data.tls_certificate.cluster",
            "module.iam.aws_iam_role.cloudwatch_agent",
            "module.iam.aws_iam_role.eks_cluster",
            "module.iam.aws_iam_role.eks_node",
            "module.iam.aws_iam_role.vpc_flow_logs",
            "module.iam.aws_iam_role_policy.vpc_flow_logs_policy",
            "module.iam.aws_iam_role_policy_attachment.cw_agent_CloudWatchAgentServerPolicy",
            "module.iam.aws_iam_role_policy_attachment.eks_cluster_AmazonEKSClusterPolicy",
            "module.iam.aws_iam_role_policy_attachment.eks_cluster_AmazonEKSVPCResourceController",
            "module.iam.aws_iam_role_policy_attachment.eks_node_AmazonEC2ContainerRegistryReadOnly",
            "module.iam.aws_iam_role_policy_attachment.eks_node_AmazonEKSWorkerNodePolicy",
            "module.iam.aws_iam_role_policy_attachment.eks_node_AmazonEKS_CNI_Policy",
            "module.vpc.aws_cloudwatch_log_group.vpc_flow_logs",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_flow_log.vpc",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table_association.private_assoc",
            "module.vpc.aws_route_table_association.public_assoc",
            "module.vpc.aws_security_group.eks_cluster",
            "module.vpc.aws_security_group.eks_nodes",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nodes_to_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow worker nodes to communicate with cluster API",
            "from_port": 443,
            "id": "sgrule-41518787",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-0357631d2c6cb217c",
            "security_group_rule_id": "sgr-0ce44e2f5bedf359c",
            "self": false,
            "source_security_group_id": "sg-09dd6cc5f5d23e1d7",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_cloudwatch_log_group.cluster",
            "module.eks.aws_eks_cluster.main",
            "module.eks.aws_eks_node_group.main",
            "module.eks.aws_iam_instance_profile.nodes",
            "module.eks.aws_iam_openid_connect_provider.cluster",
            "module.eks.aws_launch_template.nodes",
            "module.eks.data.aws_ami.eks_optimized",
            "module.eks.data.aws_caller_identity.current",
            "module.eks.data.aws_iam_role.node_role",
            "module.eks.data.tls_certificate.cluster",
            "module.iam.aws_iam_role.cloudwatch_agent",
            "module.iam.aws_iam_role.eks_cluster",
            "module.iam.aws_iam_role.eks_node",
            "module.iam.aws_iam_role.vpc_flow_logs",
            "module.iam.aws_iam_role_policy.vpc_flow_logs_policy",
            "module.iam.aws_iam_role_policy_attachment.cw_agent_CloudWatchAgentServerPolicy",
            "module.iam.aws_iam_role_policy_attachment.eks_cluster_AmazonEKSClusterPolicy",
            "module.iam.aws_iam_role_policy_attachment.eks_cluster_AmazonEKSVPCResourceController",
            "module.iam.aws_iam_role_policy_attachment.eks_node_AmazonEC2ContainerRegistryReadOnly",
            "module.iam.aws_iam_role_policy_attachment.eks_node_AmazonEKSWorkerNodePolicy",
            "module.iam.aws_iam_role_policy_attachment.eks_node_AmazonEKS_CNI_Policy",
            "module.vpc.aws_cloudwatch_log_group.vpc_flow_logs",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_flow_log.vpc",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table_association.private_assoc",
            "module.vpc.aws_route_table_association.public_assoc",
            "module.vpc.aws_security_group.eks_cluster",
            "module.vpc.aws_security_group.eks_nodes",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "pod_to_pod",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pod-to-pod communication within nodes",
            "from_port": 0,
            "id": "sgrule-1907917084",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-09dd6cc5f5d23e1d7",
            "security_group_rule_id": "sgr-0c3b8d563f106e740",
            "self": false,
            "source_security_group_id": "sg-09dd6cc5f5d23e1d7",
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_cloudwatch_log_group.cluster",
            "module.eks.aws_eks_cluster.main",
            "module.eks.aws_eks_node_group.main",
            "module.eks.aws_iam_instance_profile.nodes",
            "module.eks.aws_iam_openid_connect_provider.cluster",
            "module.eks.aws_launch_template.nodes",
            "module.eks.data.aws_ami.eks_optimized",
            "module.eks.data.aws_caller_identity.current",
            "module.eks.data.aws_iam_role.node_role",
            "module.eks.data.tls_certificate.cluster",
            "module.iam.aws_iam_role.cloudwatch_agent",
            "module.iam.aws_iam_role.eks_cluster",
            "module.iam.aws_iam_role.eks_node",
            "module.iam.aws_iam_role.vpc_flow_logs",
            "module.iam.aws_iam_role_policy.vpc_flow_logs_policy",
            "module.iam.aws_iam_role_policy_attachment.cw_agent_CloudWatchAgentServerPolicy",
            "module.iam.aws_iam_role_policy_attachment.eks_cluster_AmazonEKSClusterPolicy",
            "module.iam.aws_iam_role_policy_attachment.eks_cluster_AmazonEKSVPCResourceController",
            "module.iam.aws_iam_role_policy_attachment.eks_node_AmazonEC2ContainerRegistryReadOnly",
            "module.iam.aws_iam_role_policy_attachment.eks_node_AmazonEKSWorkerNodePolicy",
            "module.iam.aws_iam_role_policy_attachment.eks_node_AmazonEKS_CNI_Policy",
            "module.vpc.aws_cloudwatch_log_group.vpc_flow_logs",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_flow_log.vpc",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table_association.private_assoc",
            "module.vpc.aws_route_table_association.public_assoc",
            "module.vpc.aws_security_group.eks_cluster",
            "module.vpc.aws_security_group.eks_nodes",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e34de26b36564570",
            "arn": "arn:aws:ec2:us-east-1:821368347884:elastic-ip/eipalloc-0e34de26b36564570",
            "association_id": "eipassoc-07400e9d0b4e4e685",
            "domain": "vpc",
            "id": "eipalloc-0e34de26b36564570",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0b44d92c0cd0e1a85",
            "private_dns": "ip-10-0-0-114.ec2.internal",
            "private_ip": "10.0.0.114",
            "public_dns": "ec2-44-210-200-250.compute-1.amazonaws.com",
            "public_ip": "44.210.200.250",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Backups": "Daily",
              "Compliance": "SOC2",
              "CostCenter": "Engineering",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "saasinfralab-dev-nat-eip-0",
              "Owner": "Platform Engineering",
              "Project": "SaasInfralab",
              "Repository": "terraform-modules"
            },
            "tags_all": {
              "Backups": "Daily",
              "Compliance": "SOC2",
              "CostCenter": "Engineering",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "saasinfralab-dev-nat-eip-0",
              "Owner": "Platform Engineering",
              "Project": "SaasInfralab",
              "Repository": "terraform-modules"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.iam.aws_iam_role.cloudwatch_agent",
            "module.iam.aws_iam_role.eks_cluster",
            "module.iam.aws_iam_role.eks_node",
            "module.iam.aws_iam_role.vpc_flow_logs",
            "module.iam.aws_iam_role_policy.vpc_flow_logs_policy",
            "module.iam.aws_iam_role_policy_attachment.cw_agent_CloudWatchAgentServerPolicy",
            "module.iam.aws_iam_role_policy_attachment.eks_cluster_AmazonEKSClusterPolicy",
            "module.iam.aws_iam_role_policy_attachment.eks_cluster_AmazonEKSVPCResourceController",
            "module.iam.aws_iam_role_policy_attachment.eks_node_AmazonEC2ContainerRegistryReadOnly",
            "module.iam.aws_iam_role_policy_attachment.eks_node_AmazonEKSWorkerNodePolicy",
            "module.iam.aws_iam_role_policy_attachment.eks_node_AmazonEKS_CNI_Policy"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:821368347884:internet-gateway/igw-0d962415b4fe57c6c",
            "id": "igw-0d962415b4fe57c6c",
            "owner_id": "821368347884",
            "region": "us-east-1",
            "tags": {
              "Backups": "Daily",
              "Compliance": "SOC2",
              "CostCenter": "Engineering",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "saasinfralab-dev-igw",
              "Owner": "Platform Engineering",
              "Project": "SaasInfralab",
              "Repository": "terraform-modules"
            },
            "tags_all": {
              "Backups": "Daily",
              "Compliance": "SOC2",
              "CostCenter": "Engineering",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "saasinfralab-dev-igw",
              "Owner": "Platform Engineering",
              "Project": "SaasInfralab",
              "Repository": "terraform-modules"
            },
            "vpc_id": "vpc-0e81350b5fbf55637"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.iam.aws_iam_role.cloudwatch_agent",
            "module.iam.aws_iam_role.eks_cluster",
            "module.iam.aws_iam_role.eks_node",
            "module.iam.aws_iam_role.vpc_flow_logs",
            "module.iam.aws_iam_role_policy.vpc_flow_logs_policy",
            "module.iam.aws_iam_role_policy_attachment.cw_agent_CloudWatchAgentServerPolicy",
            "module.iam.aws_iam_role_policy_attachment.eks_cluster_AmazonEKSClusterPolicy",
            "module.iam.aws_iam_role_policy_attachment.eks_cluster_AmazonEKSVPCResourceController",
            "module.iam.aws_iam_role_policy_attachment.eks_node_AmazonEC2ContainerRegistryReadOnly",
            "module.iam.aws_iam_role_policy_attachment.eks_node_AmazonEKSWorkerNodePolicy",
            "module.iam.aws_iam_role_policy_attachment.eks_node_AmazonEKS_CNI_Policy",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e34de26b36564570",
            "association_id": "eipassoc-07400e9d0b4e4e685",
            "connectivity_type": "public",
            "id": "nat-09cab33521e429f47",
            "network_interface_id": "eni-0b44d92c0cd0e1a85",
            "private_ip": "10.0.0.114",
            "public_ip": "44.210.200.250",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-027df687791c7a35a",
            "tags": {
              "Backups": "Daily",
              "Compliance": "SOC2",
              "CostCenter": "Engineering",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "saasinfralab-dev-nat-0",
              "Owner": "Platform Engineering",
              "Project": "SaasInfralab",
              "Repository": "terraform-modules"
            },
            "tags_all": {
              "Backups": "Daily",
              "Compliance": "SOC2",
              "CostCenter": "Engineering",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "saasinfralab-dev-nat-0",
              "Owner": "Platform Engineering",
              "Project": "SaasInfralab",
              "Repository": "terraform-modules"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.iam.aws_iam_role.cloudwatch_agent",
            "module.iam.aws_iam_role.eks_cluster",
            "module.iam.aws_iam_role.eks_node",
            "module.iam.aws_iam_role.vpc_flow_logs",
            "module.iam.aws_iam_role_policy.vpc_flow_logs_policy",
            "module.iam.aws_iam_role_policy_attachment.cw_agent_CloudWatchAgentServerPolicy",
            "module.iam.aws_iam_role_policy_attachment.eks_cluster_AmazonEKSClusterPolicy",
            "module.iam.aws_iam_role_policy_attachment.eks_cluster_AmazonEKSVPCResourceController",
            "module.iam.aws_iam_role_policy_attachment.eks_node_AmazonEC2ContainerRegistryReadOnly",
            "module.iam.aws_iam_role_policy_attachment.eks_node_AmazonEKSWorkerNodePolicy",
            "module.iam.aws_iam_role_policy_attachment.eks_node_AmazonEKS_CNI_Policy",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:821368347884:route-table/rtb-0cdbb1006aa56dc1a",
            "id": "rtb-0cdbb1006aa56dc1a",
            "owner_id": "821368347884",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-09cab33521e429f47",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Backups": "Daily",
              "Compliance": "SOC2",
              "CostCenter": "Engineering",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "saasinfralab-dev-private-rt-us-east-1a",
              "Owner": "Platform Engineering",
              "Project": "SaasInfralab",
              "Repository": "terraform-modules"
            },
            "tags_all": {
              "Backups": "Daily",
              "Compliance": "SOC2",
              "CostCenter": "Engineering",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "saasinfralab-dev-private-rt-us-east-1a",
              "Owner": "Platform Engineering",
              "Project": "SaasInfralab",
              "Repository": "terraform-modules"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e81350b5fbf55637"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "821368347884",
            "id": "rtb-0cdbb1006aa56dc1a",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.iam.aws_iam_role.cloudwatch_agent",
            "module.iam.aws_iam_role.eks_cluster",
            "module.iam.aws_iam_role.eks_node",
            "module.iam.aws_iam_role.vpc_flow_logs",
            "module.iam.aws_iam_role_policy.vpc_flow_logs_policy",
            "module.iam.aws_iam_role_policy_attachment.cw_agent_CloudWatchAgentServerPolicy",
            "module.iam.aws_iam_role_policy_attachment.eks_cluster_AmazonEKSClusterPolicy",
            "module.iam.aws_iam_role_policy_attachment.eks_cluster_AmazonEKSVPCResourceController",
            "module.iam.aws_iam_role_policy_attachment.eks_node_AmazonEC2ContainerRegistryReadOnly",
            "module.iam.aws_iam_role_policy_attachment.eks_node_AmazonEKSWorkerNodePolicy",
            "module.iam.aws_iam_role_policy_attachment.eks_node_AmazonEKS_CNI_Policy",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:821368347884:route-table/rtb-04b49397f7251f08c",
            "id": "rtb-04b49397f7251f08c",
            "owner_id": "821368347884",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-09cab33521e429f47",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Backups": "Daily",
              "Compliance": "SOC2",
              "CostCenter": "Engineering",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "saasinfralab-dev-private-rt-us-east-1b",
              "Owner": "Platform Engineering",
              "Project": "SaasInfralab",
              "Repository": "terraform-modules"
            },
            "tags_all": {
              "Backups": "Daily",
              "Compliance": "SOC2",
              "CostCenter": "Engineering",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "saasinfralab-dev-private-rt-us-east-1b",
              "Owner": "Platform Engineering",
              "Project": "SaasInfralab",
              "Repository": "terraform-modules"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e81350b5fbf55637"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "821368347884",
            "id": "rtb-04b49397f7251f08c",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.iam.aws_iam_role.cloudwatch_agent",
            "module.iam.aws_iam_role.eks_cluster",
            "module.iam.aws_iam_role.eks_node",
            "module.iam.aws_iam_role.vpc_flow_logs",
            "module.iam.aws_iam_role_policy.vpc_flow_logs_policy",
            "module.iam.aws_iam_role_policy_attachment.cw_agent_CloudWatchAgentServerPolicy",
            "module.iam.aws_iam_role_policy_attachment.eks_cluster_AmazonEKSClusterPolicy",
            "module.iam.aws_iam_role_policy_attachment.eks_cluster_AmazonEKSVPCResourceController",
            "module.iam.aws_iam_role_policy_attachment.eks_node_AmazonEC2ContainerRegistryReadOnly",
            "module.iam.aws_iam_role_policy_attachment.eks_node_AmazonEKSWorkerNodePolicy",
            "module.iam.aws_iam_role_policy_attachment.eks_node_AmazonEKS_CNI_Policy",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "us-east-1c",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:821368347884:route-table/rtb-00b998ec3256c7d1d",
            "id": "rtb-00b998ec3256c7d1d",
            "owner_id": "821368347884",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-09cab33521e429f47",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Backups": "Daily",
              "Compliance": "SOC2",
              "CostCenter": "Engineering",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "saasinfralab-dev-private-rt-us-east-1c",
              "Owner": "Platform Engineering",
              "Project": "SaasInfralab",
              "Repository": "terraform-modules"
            },
            "tags_all": {
              "Backups": "Daily",
              "Compliance": "SOC2",
              "CostCenter": "Engineering",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "saasinfralab-dev-private-rt-us-east-1c",
              "Owner": "Platform Engineering",
              "Project": "SaasInfralab",
              "Repository": "terraform-modules"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e81350b5fbf55637"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "821368347884",
            "id": "rtb-00b998ec3256c7d1d",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.iam.aws_iam_role.cloudwatch_agent",
            "module.iam.aws_iam_role.eks_cluster",
            "module.iam.aws_iam_role.eks_node",
            "module.iam.aws_iam_role.vpc_flow_logs",
            "module.iam.aws_iam_role_policy.vpc_flow_logs_policy",
            "module.iam.aws_iam_role_policy_attachment.cw_agent_CloudWatchAgentServerPolicy",
            "module.iam.aws_iam_role_policy_attachment.eks_cluster_AmazonEKSClusterPolicy",
            "module.iam.aws_iam_role_policy_attachment.eks_cluster_AmazonEKSVPCResourceController",
            "module.iam.aws_iam_role_policy_attachment.eks_node_AmazonEC2ContainerRegistryReadOnly",
            "module.iam.aws_iam_role_policy_attachment.eks_node_AmazonEKSWorkerNodePolicy",
            "module.iam.aws_iam_role_policy_attachment.eks_node_AmazonEKS_CNI_Policy",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:821368347884:route-table/rtb-02deab4b5aadc4145",
            "id": "rtb-02deab4b5aadc4145",
            "owner_id": "821368347884",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d962415b4fe57c6c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Backups": "Daily",
              "Compliance": "SOC2",
              "CostCenter": "Engineering",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "saasinfralab-dev-public-rt",
              "Owner": "Platform Engineering",
              "Project": "SaasInfralab",
              "Repository": "terraform-modules"
            },
            "tags_all": {
              "Backups": "Daily",
              "Compliance": "SOC2",
              "CostCenter": "Engineering",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "saasinfralab-dev-public-rt",
              "Owner": "Platform Engineering",
              "Project": "SaasInfralab",
              "Repository": "terraform-modules"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e81350b5fbf55637"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "821368347884",
            "id": "rtb-02deab4b5aadc4145",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.iam.aws_iam_role.cloudwatch_agent",
            "module.iam.aws_iam_role.eks_cluster",
            "module.iam.aws_iam_role.eks_node",
            "module.iam.aws_iam_role.vpc_flow_logs",
            "module.iam.aws_iam_role_policy.vpc_flow_logs_policy",
            "module.iam.aws_iam_role_policy_attachment.cw_agent_CloudWatchAgentServerPolicy",
            "module.iam.aws_iam_role_policy_attachment.eks_cluster_AmazonEKSClusterPolicy",
            "module.iam.aws_iam_role_policy_attachment.eks_cluster_AmazonEKSVPCResourceController",
            "module.iam.aws_iam_role_policy_attachment.eks_node_AmazonEC2ContainerRegistryReadOnly",
            "module.iam.aws_iam_role_policy_attachment.eks_node_AmazonEKSWorkerNodePolicy",
            "module.iam.aws_iam_role_policy_attachment.eks_node_AmazonEKS_CNI_Policy",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-095a9c311e677b91d",
            "region": "us-east-1",
            "route_table_id": "rtb-0cdbb1006aa56dc1a",
            "subnet_id": "subnet-0714cef423fed9c45"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.iam.aws_iam_role.cloudwatch_agent",
            "module.iam.aws_iam_role.eks_cluster",
            "module.iam.aws_iam_role.eks_node",
            "module.iam.aws_iam_role.vpc_flow_logs",
            "module.iam.aws_iam_role_policy.vpc_flow_logs_policy",
            "module.iam.aws_iam_role_policy_attachment.cw_agent_CloudWatchAgentServerPolicy",
            "module.iam.aws_iam_role_policy_attachment.eks_cluster_AmazonEKSClusterPolicy",
            "module.iam.aws_iam_role_policy_attachment.eks_cluster_AmazonEKSVPCResourceController",
            "module.iam.aws_iam_role_policy_attachment.eks_node_AmazonEC2ContainerRegistryReadOnly",
            "module.iam.aws_iam_role_policy_attachment.eks_node_AmazonEKSWorkerNodePolicy",
            "module.iam.aws_iam_role_policy_attachment.eks_node_AmazonEKS_CNI_Policy",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0006002e8f0f84c0b",
            "region": "us-east-1",
            "route_table_id": "rtb-04b49397f7251f08c",
            "subnet_id": "subnet-062c9e20ac5b43dc9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.iam.aws_iam_role.cloudwatch_agent",
            "module.iam.aws_iam_role.eks_cluster",
            "module.iam.aws_iam_role.eks_node",
            "module.iam.aws_iam_role.vpc_flow_logs",
            "module.iam.aws_iam_role_policy.vpc_flow_logs_policy",
            "module.iam.aws_iam_role_policy_attachment.cw_agent_CloudWatchAgentServerPolicy",
            "module.iam.aws_iam_role_policy_attachment.eks_cluster_AmazonEKSClusterPolicy",
            "module.iam.aws_iam_role_policy_attachment.eks_cluster_AmazonEKSVPCResourceController",
            "module.iam.aws_iam_role_policy_attachment.eks_node_AmazonEC2ContainerRegistryReadOnly",
            "module.iam.aws_iam_role_policy_attachment.eks_node_AmazonEKSWorkerNodePolicy",
            "module.iam.aws_iam_role_policy_attachment.eks_node_AmazonEKS_CNI_Policy",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "us-east-1c",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0779fc31c0190a749",
            "region": "us-east-1",
            "route_table_id": "rtb-00b998ec3256c7d1d",
            "subnet_id": "subnet-06becebda5b43cc63"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.iam.aws_iam_role.cloudwatch_agent",
            "module.iam.aws_iam_role.eks_cluster",
            "module.iam.aws_iam_role.eks_node",
            "module.iam.aws_iam_role.vpc_flow_logs",
            "module.iam.aws_iam_role_policy.vpc_flow_logs_policy",
            "module.iam.aws_iam_role_policy_attachment.cw_agent_CloudWatchAgentServerPolicy",
            "module.iam.aws_iam_role_policy_attachment.eks_cluster_AmazonEKSClusterPolicy",
            "module.iam.aws_iam_role_policy_attachment.eks_cluster_AmazonEKSVPCResourceController",
            "module.iam.aws_iam_role_policy_attachment.eks_node_AmazonEC2ContainerRegistryReadOnly",
            "module.iam.aws_iam_role_policy_attachment.eks_node_AmazonEKSWorkerNodePolicy",
            "module.iam.aws_iam_role_policy_attachment.eks_node_AmazonEKS_CNI_Policy",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-073da14a60b6b53fe",
            "region": "us-east-1",
            "route_table_id": "rtb-02deab4b5aadc4145",
            "subnet_id": "subnet-027df687791c7a35a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.iam.aws_iam_role.cloudwatch_agent",
            "module.iam.aws_iam_role.eks_cluster",
            "module.iam.aws_iam_role.eks_node",
            "module.iam.aws_iam_role.vpc_flow_logs",
            "module.iam.aws_iam_role_policy.vpc_flow_logs_policy",
            "module.iam.aws_iam_role_policy_attachment.cw_agent_CloudWatchAgentServerPolicy",
            "module.iam.aws_iam_role_policy_attachment.eks_cluster_AmazonEKSClusterPolicy",
            "module.iam.aws_iam_role_policy_attachment.eks_cluster_AmazonEKSVPCResourceController",
            "module.iam.aws_iam_role_policy_attachment.eks_node_AmazonEC2ContainerRegistryReadOnly",
            "module.iam.aws_iam_role_policy_attachment.eks_node_AmazonEKSWorkerNodePolicy",
            "module.iam.aws_iam_role_policy_attachment.eks_node_AmazonEKS_CNI_Policy",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09a44568f0869c8fe",
            "region": "us-east-1",
            "route_table_id": "rtb-02deab4b5aadc4145",
            "subnet_id": "subnet-02a9e9de740635aca"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.iam.aws_iam_role.cloudwatch_agent",
            "module.iam.aws_iam_role.eks_cluster",
            "module.iam.aws_iam_role.eks_node",
            "module.iam.aws_iam_role.vpc_flow_logs",
            "module.iam.aws_iam_role_policy.vpc_flow_logs_policy",
            "module.iam.aws_iam_role_policy_attachment.cw_agent_CloudWatchAgentServerPolicy",
            "module.iam.aws_iam_role_policy_attachment.eks_cluster_AmazonEKSClusterPolicy",
            "module.iam.aws_iam_role_policy_attachment.eks_cluster_AmazonEKSVPCResourceController",
            "module.iam.aws_iam_role_policy_attachment.eks_node_AmazonEC2ContainerRegistryReadOnly",
            "module.iam.aws_iam_role_policy_attachment.eks_node_AmazonEKSWorkerNodePolicy",
            "module.iam.aws_iam_role_policy_attachment.eks_node_AmazonEKS_CNI_Policy",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "us-east-1c",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09ccd6ca6a3cbf282",
            "region": "us-east-1",
            "route_table_id": "rtb-02deab4b5aadc4145",
            "subnet_id": "subnet-0b8d045d2c5a33e8f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.iam.aws_iam_role.cloudwatch_agent",
            "module.iam.aws_iam_role.eks_cluster",
            "module.iam.aws_iam_role.eks_node",
            "module.iam.aws_iam_role.vpc_flow_logs",
            "module.iam.aws_iam_role_policy.vpc_flow_logs_policy",
            "module.iam.aws_iam_role_policy_attachment.cw_agent_CloudWatchAgentServerPolicy",
            "module.iam.aws_iam_role_policy_attachment.eks_cluster_AmazonEKSClusterPolicy",
            "module.iam.aws_iam_role_policy_attachment.eks_cluster_AmazonEKSVPCResourceController",
            "module.iam.aws_iam_role_policy_attachment.eks_node_AmazonEC2ContainerRegistryReadOnly",
            "module.iam.aws_iam_role_policy_attachment.eks_node_AmazonEKSWorkerNodePolicy",
            "module.iam.aws_iam_role_policy_attachment.eks_node_AmazonEKS_CNI_Policy",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:821368347884:security-group/sg-0357631d2c6cb217c",
            "description": "Security group for EKS control plane",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0357631d2c6cb217c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS to EKS API from allowed CIDRs",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Allow worker nodes to communicate with cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09dd6cc5f5d23e1d7"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "saasinfralab-dev-eks-cluster-sg",
            "name_prefix": "",
            "owner_id": "821368347884",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Backups": "Daily",
              "Compliance": "SOC2",
              "CostCenter": "Engineering",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "saasinfralab-dev-eks-cluster-sg",
              "Owner": "Platform Engineering",
              "Project": "SaasInfralab",
              "Repository": "terraform-modules"
            },
            "tags_all": {
              "Backups": "Daily",
              "Compliance": "SOC2",
              "CostCenter": "Engineering",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "saasinfralab-dev-eks-cluster-sg",
              "Owner": "Platform Engineering",
              "Project": "SaasInfralab",
              "Repository": "terraform-modules"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e81350b5fbf55637"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "821368347884",
            "id": "sg-0357631d2c6cb217c",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.iam.aws_iam_role.cloudwatch_agent",
            "module.iam.aws_iam_role.eks_cluster",
            "module.iam.aws_iam_role.eks_node",
            "module.iam.aws_iam_role.vpc_flow_logs",
            "module.iam.aws_iam_role_policy.vpc_flow_logs_policy",
            "module.iam.aws_iam_role_policy_attachment.cw_agent_CloudWatchAgentServerPolicy",
            "module.iam.aws_iam_role_policy_attachment.eks_cluster_AmazonEKSClusterPolicy",
            "module.iam.aws_iam_role_policy_attachment.eks_cluster_AmazonEKSVPCResourceController",
            "module.iam.aws_iam_role_policy_attachment.eks_node_AmazonEC2ContainerRegistryReadOnly",
            "module.iam.aws_iam_role_policy_attachment.eks_node_AmazonEKSWorkerNodePolicy",
            "module.iam.aws_iam_role_policy_attachment.eks_node_AmazonEKS_CNI_Policy",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:821368347884:security-group/sg-09dd6cc5f5d23e1d7",
            "description": "Security group for EKS worker nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09dd6cc5f5d23e1d7",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "node to node",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "saasinfralab-dev-eks-nodes-sg",
            "name_prefix": "",
            "owner_id": "821368347884",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Backups": "Daily",
              "Compliance": "SOC2",
              "CostCenter": "Engineering",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "saasinfralab-dev-eks-nodes-sg",
              "Owner": "Platform Engineering",
              "Project": "SaasInfralab",
              "Repository": "terraform-modules"
            },
            "tags_all": {
              "Backups": "Daily",
              "Compliance": "SOC2",
              "CostCenter": "Engineering",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "saasinfralab-dev-eks-nodes-sg",
              "Owner": "Platform Engineering",
              "Project": "SaasInfralab",
              "Repository": "terraform-modules"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e81350b5fbf55637"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "821368347884",
            "id": "sg-09dd6cc5f5d23e1d7",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.iam.aws_iam_role.cloudwatch_agent",
            "module.iam.aws_iam_role.eks_cluster",
            "module.iam.aws_iam_role.eks_node",
            "module.iam.aws_iam_role.vpc_flow_logs",
            "module.iam.aws_iam_role_policy.vpc_flow_logs_policy",
            "module.iam.aws_iam_role_policy_attachment.cw_agent_CloudWatchAgentServerPolicy",
            "module.iam.aws_iam_role_policy_attachment.eks_cluster_AmazonEKSClusterPolicy",
            "module.iam.aws_iam_role_policy_attachment.eks_cluster_AmazonEKSVPCResourceController",
            "module.iam.aws_iam_role_policy_attachment.eks_node_AmazonEC2ContainerRegistryReadOnly",
            "module.iam.aws_iam_role_policy_attachment.eks_node_AmazonEKSWorkerNodePolicy",
            "module.iam.aws_iam_role_policy_attachment.eks_node_AmazonEKS_CNI_Policy",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:821368347884:subnet/subnet-0714cef423fed9c45",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0714cef423fed9c45",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "821368347884",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Backups": "Daily",
              "Compliance": "SOC2",
              "CostCenter": "Engineering",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "saasinfralab-dev-private-us-east-1a",
              "Owner": "Platform Engineering",
              "Project": "SaasInfralab",
              "Repository": "terraform-modules"
            },
            "tags_all": {
              "Backups": "Daily",
              "Compliance": "SOC2",
              "CostCenter": "Engineering",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "saasinfralab-dev-private-us-east-1a",
              "Owner": "Platform Engineering",
              "Project": "SaasInfralab",
              "Repository": "terraform-modules"
            },
            "vpc_id": "vpc-0e81350b5fbf55637"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "821368347884",
            "id": "subnet-0714cef423fed9c45",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.iam.aws_iam_role.cloudwatch_agent",
            "module.iam.aws_iam_role.eks_cluster",
            "module.iam.aws_iam_role.eks_node",
            "module.iam.aws_iam_role.vpc_flow_logs",
            "module.iam.aws_iam_role_policy.vpc_flow_logs_policy",
            "module.iam.aws_iam_role_policy_attachment.cw_agent_CloudWatchAgentServerPolicy",
            "module.iam.aws_iam_role_policy_attachment.eks_cluster_AmazonEKSClusterPolicy",
            "module.iam.aws_iam_role_policy_attachment.eks_cluster_AmazonEKSVPCResourceController",
            "module.iam.aws_iam_role_policy_attachment.eks_node_AmazonEC2ContainerRegistryReadOnly",
            "module.iam.aws_iam_role_policy_attachment.eks_node_AmazonEKSWorkerNodePolicy",
            "module.iam.aws_iam_role_policy_attachment.eks_node_AmazonEKS_CNI_Policy",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:821368347884:subnet/subnet-062c9e20ac5b43dc9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-062c9e20ac5b43dc9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "821368347884",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Backups": "Daily",
              "Compliance": "SOC2",
              "CostCenter": "Engineering",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "saasinfralab-dev-private-us-east-1b",
              "Owner": "Platform Engineering",
              "Project": "SaasInfralab",
              "Repository": "terraform-modules"
            },
            "tags_all": {
              "Backups": "Daily",
              "Compliance": "SOC2",
              "CostCenter": "Engineering",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "saasinfralab-dev-private-us-east-1b",
              "Owner": "Platform Engineering",
              "Project": "SaasInfralab",
              "Repository": "terraform-modules"
            },
            "vpc_id": "vpc-0e81350b5fbf55637"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "821368347884",
            "id": "subnet-062c9e20ac5b43dc9",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.iam.aws_iam_role.cloudwatch_agent",
            "module.iam.aws_iam_role.eks_cluster",
            "module.iam.aws_iam_role.eks_node",
            "module.iam.aws_iam_role.vpc_flow_logs",
            "module.iam.aws_iam_role_policy.vpc_flow_logs_policy",
            "module.iam.aws_iam_role_policy_attachment.cw_agent_CloudWatchAgentServerPolicy",
            "module.iam.aws_iam_role_policy_attachment.eks_cluster_AmazonEKSClusterPolicy",
            "module.iam.aws_iam_role_policy_attachment.eks_cluster_AmazonEKSVPCResourceController",
            "module.iam.aws_iam_role_policy_attachment.eks_node_AmazonEC2ContainerRegistryReadOnly",
            "module.iam.aws_iam_role_policy_attachment.eks_node_AmazonEKSWorkerNodePolicy",
            "module.iam.aws_iam_role_policy_attachment.eks_node_AmazonEKS_CNI_Policy",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "us-east-1c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:821368347884:subnet/subnet-06becebda5b43cc63",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06becebda5b43cc63",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "821368347884",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Backups": "Daily",
              "Compliance": "SOC2",
              "CostCenter": "Engineering",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "saasinfralab-dev-private-us-east-1c",
              "Owner": "Platform Engineering",
              "Project": "SaasInfralab",
              "Repository": "terraform-modules"
            },
            "tags_all": {
              "Backups": "Daily",
              "Compliance": "SOC2",
              "CostCenter": "Engineering",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "saasinfralab-dev-private-us-east-1c",
              "Owner": "Platform Engineering",
              "Project": "SaasInfralab",
              "Repository": "terraform-modules"
            },
            "vpc_id": "vpc-0e81350b5fbf55637"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "821368347884",
            "id": "subnet-06becebda5b43cc63",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.iam.aws_iam_role.cloudwatch_agent",
            "module.iam.aws_iam_role.eks_cluster",
            "module.iam.aws_iam_role.eks_node",
            "module.iam.aws_iam_role.vpc_flow_logs",
            "module.iam.aws_iam_role_policy.vpc_flow_logs_policy",
            "module.iam.aws_iam_role_policy_attachment.cw_agent_CloudWatchAgentServerPolicy",
            "module.iam.aws_iam_role_policy_attachment.eks_cluster_AmazonEKSClusterPolicy",
            "module.iam.aws_iam_role_policy_attachment.eks_cluster_AmazonEKSVPCResourceController",
            "module.iam.aws_iam_role_policy_attachment.eks_node_AmazonEC2ContainerRegistryReadOnly",
            "module.iam.aws_iam_role_policy_attachment.eks_node_AmazonEKSWorkerNodePolicy",
            "module.iam.aws_iam_role_policy_attachment.eks_node_AmazonEKS_CNI_Policy",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:821368347884:subnet/subnet-027df687791c7a35a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-027df687791c7a35a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "821368347884",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Backups": "Daily",
              "Compliance": "SOC2",
              "CostCenter": "Engineering",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "saasinfralab-dev-public-us-east-1a",
              "Owner": "Platform Engineering",
              "Project": "SaasInfralab",
              "Repository": "terraform-modules"
            },
            "tags_all": {
              "Backups": "Daily",
              "Compliance": "SOC2",
              "CostCenter": "Engineering",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "saasinfralab-dev-public-us-east-1a",
              "Owner": "Platform Engineering",
              "Project": "SaasInfralab",
              "Repository": "terraform-modules"
            },
            "vpc_id": "vpc-0e81350b5fbf55637"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "821368347884",
            "id": "subnet-027df687791c7a35a",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.iam.aws_iam_role.cloudwatch_agent",
            "module.iam.aws_iam_role.eks_cluster",
            "module.iam.aws_iam_role.eks_node",
            "module.iam.aws_iam_role.vpc_flow_logs",
            "module.iam.aws_iam_role_policy.vpc_flow_logs_policy",
            "module.iam.aws_iam_role_policy_attachment.cw_agent_CloudWatchAgentServerPolicy",
            "module.iam.aws_iam_role_policy_attachment.eks_cluster_AmazonEKSClusterPolicy",
            "module.iam.aws_iam_role_policy_attachment.eks_cluster_AmazonEKSVPCResourceController",
            "module.iam.aws_iam_role_policy_attachment.eks_node_AmazonEC2ContainerRegistryReadOnly",
            "module.iam.aws_iam_role_policy_attachment.eks_node_AmazonEKSWorkerNodePolicy",
            "module.iam.aws_iam_role_policy_attachment.eks_node_AmazonEKS_CNI_Policy",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:821368347884:subnet/subnet-02a9e9de740635aca",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02a9e9de740635aca",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "821368347884",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Backups": "Daily",
              "Compliance": "SOC2",
              "CostCenter": "Engineering",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "saasinfralab-dev-public-us-east-1b",
              "Owner": "Platform Engineering",
              "Project": "SaasInfralab",
              "Repository": "terraform-modules"
            },
            "tags_all": {
              "Backups": "Daily",
              "Compliance": "SOC2",
              "CostCenter": "Engineering",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "saasinfralab-dev-public-us-east-1b",
              "Owner": "Platform Engineering",
              "Project": "SaasInfralab",
              "Repository": "terraform-modules"
            },
            "vpc_id": "vpc-0e81350b5fbf55637"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "821368347884",
            "id": "subnet-02a9e9de740635aca",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.iam.aws_iam_role.cloudwatch_agent",
            "module.iam.aws_iam_role.eks_cluster",
            "module.iam.aws_iam_role.eks_node",
            "module.iam.aws_iam_role.vpc_flow_logs",
            "module.iam.aws_iam_role_policy.vpc_flow_logs_policy",
            "module.iam.aws_iam_role_policy_attachment.cw_agent_CloudWatchAgentServerPolicy",
            "module.iam.aws_iam_role_policy_attachment.eks_cluster_AmazonEKSClusterPolicy",
            "module.iam.aws_iam_role_policy_attachment.eks_cluster_AmazonEKSVPCResourceController",
            "module.iam.aws_iam_role_policy_attachment.eks_node_AmazonEC2ContainerRegistryReadOnly",
            "module.iam.aws_iam_role_policy_attachment.eks_node_AmazonEKSWorkerNodePolicy",
            "module.iam.aws_iam_role_policy_attachment.eks_node_AmazonEKS_CNI_Policy",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "us-east-1c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:821368347884:subnet/subnet-0b8d045d2c5a33e8f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b8d045d2c5a33e8f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "821368347884",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Backups": "Daily",
              "Compliance": "SOC2",
              "CostCenter": "Engineering",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "saasinfralab-dev-public-us-east-1c",
              "Owner": "Platform Engineering",
              "Project": "SaasInfralab",
              "Repository": "terraform-modules"
            },
            "tags_all": {
              "Backups": "Daily",
              "Compliance": "SOC2",
              "CostCenter": "Engineering",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "saasinfralab-dev-public-us-east-1c",
              "Owner": "Platform Engineering",
              "Project": "SaasInfralab",
              "Repository": "terraform-modules"
            },
            "vpc_id": "vpc-0e81350b5fbf55637"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "821368347884",
            "id": "subnet-0b8d045d2c5a33e8f",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.iam.aws_iam_role.cloudwatch_agent",
            "module.iam.aws_iam_role.eks_cluster",
            "module.iam.aws_iam_role.eks_node",
            "module.iam.aws_iam_role.vpc_flow_logs",
            "module.iam.aws_iam_role_policy.vpc_flow_logs_policy",
            "module.iam.aws_iam_role_policy_attachment.cw_agent_CloudWatchAgentServerPolicy",
            "module.iam.aws_iam_role_policy_attachment.eks_cluster_AmazonEKSClusterPolicy",
            "module.iam.aws_iam_role_policy_attachment.eks_cluster_AmazonEKSVPCResourceController",
            "module.iam.aws_iam_role_policy_attachment.eks_node_AmazonEC2ContainerRegistryReadOnly",
            "module.iam.aws_iam_role_policy_attachment.eks_node_AmazonEKSWorkerNodePolicy",
            "module.iam.aws_iam_role_policy_attachment.eks_node_AmazonEKS_CNI_Policy",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:821368347884:vpc/vpc-0e81350b5fbf55637",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-034c5a76a26138110",
            "default_route_table_id": "rtb-05973d0e38464669c",
            "default_security_group_id": "sg-0c770894c2e24afbf",
            "dhcp_options_id": "dopt-080fd18594fc3c37a",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e81350b5fbf55637",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05973d0e38464669c",
            "owner_id": "821368347884",
            "region": "us-east-1",
            "tags": {
              "Backups": "Daily",
              "Compliance": "SOC2",
              "CostCenter": "Engineering",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "saasinfralab-dev-vpc",
              "Owner": "Platform Engineering",
              "Project": "SaasInfralab",
              "Repository": "terraform-modules"
            },
            "tags_all": {
              "Backups": "Daily",
              "Compliance": "SOC2",
              "CostCenter": "Engineering",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "saasinfralab-dev-vpc",
              "Owner": "Platform Engineering",
              "Project": "SaasInfralab",
              "Repository": "terraform-modules"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "821368347884",
            "id": "vpc-0e81350b5fbf55637",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.iam.aws_iam_role.cloudwatch_agent",
            "module.iam.aws_iam_role.eks_cluster",
            "module.iam.aws_iam_role.eks_node",
            "module.iam.aws_iam_role.vpc_flow_logs",
            "module.iam.aws_iam_role_policy.vpc_flow_logs_policy",
            "module.iam.aws_iam_role_policy_attachment.cw_agent_CloudWatchAgentServerPolicy",
            "module.iam.aws_iam_role_policy_attachment.eks_cluster_AmazonEKSClusterPolicy",
            "module.iam.aws_iam_role_policy_attachment.eks_cluster_AmazonEKSVPCResourceController",
            "module.iam.aws_iam_role_policy_attachment.eks_node_AmazonEC2ContainerRegistryReadOnly",
            "module.iam.aws_iam_role_policy_attachment.eks_node_AmazonEKSWorkerNodePolicy",
            "module.iam.aws_iam_role_policy_attachment.eks_node_AmazonEKS_CNI_Policy"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}